Closed
Bug 236910
Opened 20 years ago
Closed 20 years ago
Elements with overflow:auto and clip: are damaged when scrolled.
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
VERIFIED
FIXED
People
(Reporter: aceman, Assigned: roc)
References
()
Details
Attachments
(2 files)
409 bytes,
text/html
|
Details | |
1.34 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
chofmann
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7a) Gecko/20040128 Firebird/0.8.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7a) Gecko/20040128 Firebird/0.8.0+ See the URL with testcase and description (Not mine!) Reproducible: Always Steps to Reproduce: See the testcases. Actual Results: The upper part of the content is lost when scrolled. Expected Results: Look what IE does since 5.5. The top of the content should hide when scrolled and then reappear when the scrollbar is moved to the top.
Assignee | ||
Updated•20 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P2
Assignee | ||
Comment 2•20 years ago
|
||
The problem is that nsContainerFrame::SyncFrameViewGeometryDependentProperties was incorrectly setting SetHasUniformBackground(PR_TRUE) on the scrollport. The background is in fact not uniform across the whole viewport because the scrollframe is clipping the background. The fix is to add a check to see whether the background is clipped (as the original comment actually suggested should be done...)
Assignee | ||
Updated•20 years ago
|
Attachment #144938 -
Flags: superreview?(dbaron)
Attachment #144938 -
Flags: review?(dbaron)
Comment 3•20 years ago
|
||
Comment on attachment 144938 [details] [diff] [review] fix r+sr=dbaron, although probably applying to only absolutely positioned elements should be enforced in nsRuleNode rather than at the callers
Attachment #144938 -
Flags: superreview?(dbaron)
Attachment #144938 -
Flags: superreview+
Attachment #144938 -
Flags: review?(dbaron)
Attachment #144938 -
Flags: review+
Assignee | ||
Comment 4•20 years ago
|
||
Comment on attachment 144938 [details] [diff] [review] fix This is very low risk. At worst we could slow scrolling down at places where we shouldn't.
Attachment #144938 -
Flags: approval1.7?
Comment 5•20 years ago
|
||
Comment on attachment 144938 [details] [diff] [review] fix a=chofmann for 1.7
Attachment #144938 -
Flags: approval1.7? → approval1.7+
Assignee | ||
Comment 6•20 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Verified with Firefox 20040423. Thanks.
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•