Bug 236910. Elements that clip their backgrounds do not present a uniform background. r+sr=dbaron,a=choffman